--- a/blog/templates/layouts/main.html
+++ b/blog/templates/layouts/main.html
@@ -24,18 +24,11 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
-              <li class="nav-item active">
-                <a class="nav-link" href="#">HOME</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">ABOUT</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">SERVICES</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">CONTACT</a>
-              </li>
+              {% for menu in menus %}
+                <li class="nav-item active">
+                  <a class="nav-link" href="{{menu.url}}">{{menu.title}}</a>
+                </li>
+              {% endfor %}
             </ul>
           </div>
         </div>
