--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block main %}
   <!-- Page Content -->
-  <div class="container">
+  <div class="container main">
     <div class="row">
       <!-- Blog Entries Column -->
       <div class="col-md-8 my-4">
@@ -34,7 +34,7 @@
       </div>
 
       <!-- Sidebar Widgets Column -->
-      <div class="col-md-4">
+      <div class="col-md-4 sidebar">
 
         <!-- Search Widget -->
         <div class="card my-4">
