--- a/blog/templates/layouts/main.html
+++ b/blog/templates/layouts/main.html
@@ -4,7 +4,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
     <title>Blog Home - Start Bootstrap Template</title>
@@ -14,7 +14,7 @@
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
   </head>
   <body>
-    <header>
+    <header class="clearfix">
       <!-- Navigation -->
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
@@ -29,6 +29,11 @@
                   <a class="nav-link" href="{{menu.url}}">{{menu.title}}</a>
                 </li>
               {% endfor %}
+              {% if user.is_authenticated %}
+                <li class="nav-item">
+                  <a href="{% url 'siteadmin' %}" class="nav-link">ADMIN</a>
+                </li>
+              {% endif %}
             </ul>
           </div>
         </div>
@@ -37,12 +42,12 @@
     {% block main %}
     {% endblock %}
     <!-- Footer -->
-    <footer class="py-5 bg-dark">
+    <footer class="py-5 bg-dark" style="position: static; bottom: 0">
       <div class="container">
         <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
       </div>
       <!-- /.container -->
-    </footer>
+    </footer> 
     <script type="text/javascript" src="{% static 'js/jquery.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
   </body>
