--- a/blog/templates/posts/single.html
+++ b/blog/templates/posts/single.html
@@ -2,7 +2,7 @@
 
 {% block main %}
   <!-- Page Content -->
-  <div class="container">
+  <div class="container main">
     <div class="row">
       <!-- Blog Entries Column -->
       <div class="col-md-8 my-4">
@@ -21,7 +21,6 @@
 
       <!-- Sidebar Widgets Column -->
       <div class="col-md-4">
-
         <!-- Search Widget -->
         <div class="card my-4">
           <h5 class="card-header">Search</h5>
