--- a/blog/templates/admin/posts.html
+++ b/blog/templates/admin/posts.html
@@ -1,7 +1,7 @@
 {% extends 'admin/home.html' %}
 
 {% block content %}
-    <h4>Post: <a href="{% url 'newpost' %}" class="btn btn-sm btn-outline-secondary">Add New</a></h4>
+    <h4><a class="btn btn-sm btn-secondary text-white">{{posts|length}} posts</a> <a href="{% url 'newpost' %}" class="btn btn-sm btn-outline-secondary">Add New</a></h4>
     <div class="card mb-4">
         <table class="table">
           <tr class="mb-1">
