--- a/blog/templates/layouts/main.html
+++ b/blog/templates/layouts/main.html
@@ -24,9 +24,9 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
-              {% for menu in menus %}
+              {% for category in categories %}
                 <li class="nav-item active">
-                  <a class="nav-link" href="{{menu.url}}">{{menu.title}}</a>
+                  <a class="nav-link text-uppercase" href="{% url 'category' category=category %}">{{category.name}}</a>
                 </li>
               {% endfor %}
               {% if user.is_authenticated %}
