--- a/blog/static/css/style.css
+++ b/blog/static/css/style.css
@@ -1,6 +1,5 @@
 
 body {
-  padding-top: 56px;
   background: #f1f1f1;
 }
 
@@ -57,4 +56,20 @@ footer{
 .nav-left li a:hover{
 	background: #6c757d;
 	color: white!important;
+}
+
+.dropdown-menu{
+	background: #343a40!important;
+	transition: all 1s;
+	padding-left: -5px;
+}
+
+.dropdown-menu a{
+	color: aqua!important;
+	font-weight: bold!important;
+	transition: all 1s;
+}
+
+.dropdown-menu a:hover{
+	background: none!important;
 }
