--- a/blog/templates/layouts/main.html
+++ b/blog/templates/layouts/main.html
@@ -14,29 +14,46 @@
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
   </head>
   <body>
-    <header class="clearfix">
-      <!-- Navigation -->
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-          <a class="navbar-brand font-bold" href="{% url 'index' %}">MYBLOG</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ml-auto">
-              {% for category in categories %}
-                <li class="nav-item"> 
-                  <a class="nav-link text-uppercase" href="{% url 'category' category=category %}">{{category.name}}</a>
-                </li>
-              {% endfor %}
-              {% if user.is_authenticated %}
-                <li class="nav-item">
-                  <a href="{% url 'siteadmin' %}" class="nav-link">ADMIN</a>
-                </li>
-              {% endif %}
-            </ul>
-          </div>
-        </div>
+    <header>
+      <nav class="navbar-top bg-info mb-0">
+        <ul class="d-flex container mb-0">
+          <li class="nav-item list-unstyled">
+            <a class="nav-link" href="{% url 'index' %}">MYBLOG</a>
+          </li>
+          <li class="ml-auto list-unstyled">
+            <li class="nav-item list-unstyled">
+              <a href="" class="nav-link">Facebook</a>
+            </li>
+            <li class="nav-item list-unstyled">
+              <a href="" class="nav-link">Twitter</a>
+            </li>
+            <li class="nav-item list-unstyled">
+              <a href="" class="nav-link">Youtube</a>
+            </li>
+            <li class="nav-item list-unstyled">
+              <a href="" class="nav-link">Instagram</a>
+            </li>
+          </li>
+        </ul>
+      </nav>
+      <nav class="navbar-bottom bg-dark">
+        <ul class="d-flex flex-wrap justify-content-center container mb-0">
+          {% for category in categories %}
+            <li class="nav-item list-unstyled">  
+              <a class="nav-link text-uppercase" href="{% url 'category' category=category %}">{{category.name}}</a>
+            </li>
+          {% endfor %}
+          {% for category in categories %}
+            <li class="nav-item list-unstyled">  
+              <a class="nav-link text-uppercase" href="{% url 'category' category=category %}">{{category.name}}</a>
+            </li>
+          {% endfor %}
+          {% if user.is_authenticated %}
+            <li class="nav-item list-unstyled">
+              <a href="{% url 'siteadmin' %}" class="nav-link">ADMIN</a>
+            </li>
+          {% endif %}
+        </ul>
       </nav>
     </header>
     {% block main %}
