--- a/blog/templates/layouts/main.html
+++ b/blog/templates/layouts/main.html
@@ -12,48 +12,50 @@
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <!-- Custom styles for this template -->
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <header>
-      <nav class="navbar-top bg-info mb-0">
-        <ul class="d-flex container mb-0">
+      <nav class="navbar-top mb-0">
+        <ul class="d-flex justify-content-between container px-0 mb-0">
           <li class="nav-item list-unstyled">
             <a class="nav-link" href="{% url 'index' %}">MYBLOG</a>
           </li>
-          <li class="ml-auto list-unstyled">
-            <li class="nav-item list-unstyled">
-              <a href="" class="nav-link">Facebook</a>
-            </li>
-            <li class="nav-item list-unstyled">
-              <a href="" class="nav-link">Twitter</a>
-            </li>
-            <li class="nav-item list-unstyled">
-              <a href="" class="nav-link">Youtube</a>
-            </li>
-            <li class="nav-item list-unstyled">
-              <a href="" class="nav-link">Instagram</a>
-            </li>
+          <li class="list-unstyled">
+            <ul class="d-flex">
+              <li class="nav-item list-unstyled">
+                <a href="" class="nav-link"><i class="fa fa-facebook-square"></i></a>
+              </li>
+              <li class="nav-item list-unstyled">
+                <a href="" class="nav-link"><i class="fa fa-twitter-square"></i></a>
+              </li>
+              <li class="nav-item list-unstyled">
+                <a href="" class="nav-link"><i class="fa fa-youtube-square"></i></a>
+              </li>
+              <li class="nav-item list-unstyled">
+                <a href="" class="nav-link"><i class="fa fa-instagram"></i></a>
+              </li>
+              <li class="nav-item list-unstyled">
+                <a class="nav-link toggler" href="#" data-target="#navbardrop" data-toggle="collapse">
+                  <i class="fa fa-caret-down"></i>
+                </a>
+              </li>
+            </ul>
           </li>
-        </ul>
+        </ul> 
       </nav>
-      <nav class="navbar-bottom bg-dark">
-        <ul class="d-flex flex-wrap justify-content-center container mb-0">
-          {% for category in categories %}
-            <li class="nav-item list-unstyled">  
-              <a class="nav-link text-uppercase" href="{% url 'category' category=category %}">{{category.name}}</a>
-            </li>
-          {% endfor %}
-          {% for category in categories %}
-            <li class="nav-item list-unstyled">  
-              <a class="nav-link text-uppercase" href="{% url 'category' category=category %}">{{category.name}}</a>
-            </li>
-          {% endfor %}
-          {% if user.is_authenticated %}
-            <li class="nav-item list-unstyled">
-              <a href="{% url 'siteadmin' %}" class="nav-link">ADMIN</a>
-            </li>
-          {% endif %}
-        </ul>
+      <nav class="navbar pb-0 navbar-bottom navbar-expand-md bg-dark navbar-dark">
+        <div class="container">
+          <div class="collapse navbar-collapse justify-content-center" id="navbardrop">
+            <ul class="navbar-nav flex-wrap">
+              {% for category in categories %}
+                <li class="nav-item">  
+                  <a class="nav-link text-uppercase text-center" href="{% url 'category' category=category %}">{{category.name}}</a>
+                </li>
+              {% endfor %}
+            </ul>
+          </div>
+        </div>
       </nav>
     </header>
     {% block main %}
