--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -8,7 +8,7 @@
       <div class="col-md-8 my-4">
         {% for post in posts %}
           <div class="card mb-4">
-            <img class="card-img-top" src="{{post.image}}" alt="Card image cap">
+            <img class="card-img-top" style="max-height: 300px;" src="{{post.image}}" alt="Card image cap">
             <div class="card-body">
               <h2 class="card-title">{{post.title}}</h2>
               <p class="card-text">{{post.content}}</p>
