--- a/blog/templates/posts/single.html
+++ b/blog/templates/posts/single.html
@@ -7,7 +7,7 @@
       <!-- Blog Entries Column -->
       <div class="col-md-8 my-4">
         <div class="card mb-4">
-          <img class="card-img-top" src="{{post.image}}" alt="Card image cap">
+          <img class="card-img-top" style="max-height: 300px;" src="{{post.image}}" alt="Card image cap">
           <div class="card-body">
             <h2 class="card-title">{{post.title}}</h2>
             <p class="card-text">{{post.content}}</p>
@@ -15,6 +15,24 @@
           <div class="card-footer text-muted">
             {{post.published}}
             <a href="">{{post.author}}</a>
+          </div>
+        </div>
+        <div class="card mb-4">
+          <h5 class="card-header">Comment</h5>
+          <div class="card-body">
+            <div class="form-group">
+              <textarea class="form-control" name="content" placeholder="Type your comment"></textarea>
+            </div>
+            <div class="d-flex">
+              <p class="text-left flex-fill">Comment as
+                {% if user.is_authenticated %}
+                  {{user}}
+                {% elif %}
+                  Guest
+                {% endif %}
+              </p>
+              <p class="text-right flex-fill"><a href="" type="submit" class="btn btn-sm btn-success">Publish</a></p>
+            </div>
           </div>
         </div>
       </div>
