--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block main %}
   <!-- Page Content -->
-  <div class="container sm:w-auto main">
+  <div class="container main">
     <div class="row">
       <!-- Blog Entries Column -->
       <div class="col-md-8 my-4">
