--- a/blog/static/css/style.css
+++ b/blog/static/css/style.css
@@ -18,13 +18,13 @@ body {
 }
 
 .navbar-top{
-	background: rgba(63, 63, 171, 0.75);
+	background: rgba(21, 51, 28, 0.75);
 }
 
 .navbar-top .nav-link {
-	color: #20d26f!important;
+	color: rgba(12, 247, 225, 0.93)!important;
 	font-weight: bold!important;
-	font-size: 20px;
+	font-size: 16px;
 }
 
 .nav-item .toggler{
