--- a/blog/templates/layouts/header.html
+++ b/blog/templates/layouts/header.html
@@ -40,7 +40,12 @@
             <a class="nav-link text-center" href="{% url 'siteadmin' %}">ADMIN</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-center" href="{% url 'logout' %}">LOGOUT</a>
+            <a class="nav-link text-center" href="{% url 'logout' %}?next={% url 'index' %}"><i class="fa fa-sign-out"></i> LOGOUT</a>
+          </li>
+        {% endif %}
+        {% if not user.is_authenticated %}
+          <li class="nav-item">
+            <a href="{% url 'login' %}?next=/site/admin" class="nav-link text-center"><i class="fa fa-sign-in"></i> LOGIN</a>
           </li>
         {% endif %}
       </ul>
