--- a/blog/templates/layouts/footer.html
+++ b/blog/templates/layouts/footer.html
@@ -7,3 +7,4 @@
 </footer>
 <script type="text/javascript" src="{% static 'js/jquery.min.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/main.js' %}"></script>
