--- a/blog/templates/layouts/header.html
+++ b/blog/templates/layouts/header.html
@@ -27,7 +27,7 @@
   </ul> 
 </nav>
 <nav class="navbar py-0 navbar-bottom navbar-expand-md bg-dark navbar-dark">
-  <div class="container">
+  <div class="container"> 
     <div class="collapse py-1 navbar-collapse" id="navbardrop">
       <ul class="navbar-nav flex-wrap flex-row justify-content-between container-fluid">
         <li class="nav-item">
@@ -46,6 +46,9 @@
             <a class="nav-link text-center" href="{% url 'logout' %}?next={% url 'index' %}"><i class="fa fa-sign-out"></i> LOGOUT</a>
           </li>
         {% else %}
+          <li class="nav-item">
+              <a href="{% url 'signup' %}?next=/site/admin" class="nav-link text-center"><i class="fa fa-sign-in"></i> SIGNUP</a>
+          </li>
           <li class="nav-item">
             <a href="{% url 'login' %}?next=/site/admin" class="nav-link text-center"><i class="fa fa-sign-in"></i> LOGIN</a>
           </li>
