--- a/blog/static/css/style.css
+++ b/blog/static/css/style.css
@@ -18,11 +18,11 @@ body {
 }
 
 .navbar-top{
-	background: rgba(21, 51, 28, 0.75);
+	background: rgba(51, 210, 202, 0.75);
 }
 
 .navbar-top .nav-link {
-	color: rgba(12, 247, 225, 0.93)!important;
+	color: blue!important;
 	font-weight: bold!important;
 	font-size: 16px;
 }
