--- a/blog/templates/layouts/header.html
+++ b/blog/templates/layouts/header.html
@@ -1,56 +1,58 @@
 <nav class="navbar-top mb-0">
-  <ul class="d-flex justify-content-between container px-0 mb-0">
-    <li class="nav-item list-unstyled">
-      <a class="nav-link" href="{% url 'index' %}">MYBLOG</a>
-    </li>
-    <li class="list-unstyled">
-      <ul class="d-flex">
-        <li class="nav-item list-unstyled">
-          <a href="" class="nav-link"><i class="fa fa-facebook-square"></i></a>
-        </li>
-        <li class="nav-item list-unstyled">
-          <a href="" class="nav-link"><i class="fa fa-twitter-square"></i></a>
-        </li>
-        <li class="nav-item list-unstyled">
-          <a href="" class="nav-link"><i class="fa fa-youtube-square"></i></a>
-        </li>
-        <li class="nav-item list-unstyled">
-          <a href="" class="nav-link"><i class="fa fa-instagram"></i></a>
-        </li>
-        <li class="nav-item list-unstyled">
-          <a class="nav-link toggler" href="#" data-target="#navbardrop" data-toggle="collapse">
-            <i class="fa fa-caret-down"></i>
-          </a>
-        </li>
-      </ul>
-    </li>
-  </ul> 
+  <div class="container">
+    <ul class="d-flex justify-content-between px-0 mb-0">
+      <li class="nav-item list-unstyled">
+        <a class="nav-link logo" href="{% url 'index' %}">MYBLOG</a>
+      </li>
+      <li class="list-unstyled">
+        <ul class="d-flex">
+          <li class="nav-item list-unstyled">
+            <a href="" class="nav-link"><i class="fa fa-facebook-square"></i></a>
+          </li>
+          <li class="nav-item list-unstyled">
+            <a href="" class="nav-link"><i class="fa fa-twitter-square"></i></a>
+          </li>
+          <li class="nav-item list-unstyled">
+            <a href="" class="nav-link"><i class="fa fa-youtube-square"></i></a>
+          </li>
+          <li class="nav-item list-unstyled">
+            <a href="" class="nav-link"><i class="fa fa-instagram"></i></a>
+          </li>
+          <li class="nav-item list-unstyled">
+            <a class="nav-link toggler" href="#" data-target="#navbardrop" data-toggle="collapse">
+              <i class="fa fa-caret-down"></i>
+            </a>
+          </li>
+        </ul>
+      </li>
+    </ul> 
+  </div>
 </nav>
 <nav class="navbar py-0 navbar-bottom navbar-expand-md bg-dark navbar-dark">
   <div class="container"> 
     <div class="collapse py-1 navbar-collapse" id="navbardrop">
       <ul class="navbar-nav flex-wrap flex-row justify-content-between container-fluid">
         <li class="nav-item">
-          <a class="nav-link text-center" href="{% url 'index' %}">HOME</a>
+          <a class="nav-link text-center" href="{% url 'index' %}"><i class="fa fa-home"></i> HOME</a>
         </li>
         {% for category in categories %}
           <li class="nav-item">  
-            <a class="nav-link text-uppercase text-center" href="{% url 'category' category=category %}">{{category.name}}</a>
+            <a class="nav-link text-uppercase text-center" href="{% url 'category' category=category %}"><i class="fa fa-circle"></i> {{category.name}}</a>
           </li>
         {% endfor %}
         {% if user.is_authenticated %}
           <li class="nav-item">
-            <a class="nav-link text-center" href="{% url 'siteadmin' %}">ADMIN</a>
+            <a class="nav-link text-center" href="{% url 'siteadmin' %}"><i class="fa fa-user"></i> ADMIN</a>
           </li>
           <li class="nav-item">
             <a class="nav-link text-center" href="{% url 'logout' %}?next={% url 'index' %}"><i class="fa fa-sign-out"></i> LOGOUT</a>
           </li>
         {% else %}
           <li class="nav-item">
-              <a href="{% url 'signup' %}?next=/site/admin" class="nav-link text-center"><i class="fa fa-sign-in"></i> SIGNUP</a>
+              <a href="{% url 'signup' %}?next=/site/admin" class="nav-link text-center"><i class="fa fa-user"></i> SIGNUP</a>
           </li>
           <li class="nav-item">
-            <a href="{% url 'login' %}?next=/site/admin" class="nav-link text-center"><i class="fa fa-sign-in"></i> LOGIN</a>
+            <a href="{% url 'login' %}?next=/" class="nav-link text-center"><i class="fa fa-sign-in"></i> LOGIN</a>
           </li>
         {% endif %}
       </ul>
