--- a/blog/templates/posts/single.html
+++ b/blog/templates/posts/single.html
@@ -12,9 +12,17 @@
             <h2 class="card-title">{{post.title}}</h2>
             <p class="card-text">{{post.content}}</p>
           </div>
-          <div class="card-footer text-muted">
-            {{post.published}}
-            <a href="">{{post.author}}</a>
+          <div class="card-footer">
+            <span><i class="fal fa-clock"></i>{{post.published}}</span>
+              <span>
+                <a href=""><i class="fa fa-user"></i> {{post.author}}</a>
+              </span>
+              <span>
+                {% for tag in post.tags.all %}
+                  <span class="font-bold">.</span>
+                  <a href="">{{tag.name}}</a>
+                {% endfor %}
+              </span>
           </div>
         </div>
         <div class="card mb-4">
