added codes for rendering tags

--- a/blog/templates/layouts/header.html
+++ b/blog/templates/layouts/header.html
@@ -28,7 +28,7 @@
     </ul> 
   </div>
 </nav>
-<nav class="navbar py-0 navbar-bottom navbar-expand-md bg-dark navbar-dark">
+<nav class="navbar py-0 navbar-bottom navbar-expand-md">
   <div class="container"> 
     <div class="collapse py-1 navbar-collapse" id="navbardrop">
       <ul class="navbar-nav flex-wrap px-1 flex-row justify-content-between container-fluid">
