--- a/blog/templates/posts/single.html
+++ b/blog/templates/posts/single.html
@@ -46,12 +46,18 @@
         <div class="card mb-4 comments">
           <h5 class="card-header">Top Comments</h5>
           <div class="card-body d-flex flex-column">
-            {% for comment in post.comments.all %}
+            {% if post.comments.all|length %}
+              {% for comment in post.comments.all %}
+                <div class="d-flex p-2 mb-2" style="background: #f1f1f1">
+                  <p class="mb-0 font-bold">{{comment.author}}: </p>
+                  <p class="mb-0">{{comment.content}}</p>
+                </div>
+              {% endfor %}
+            {% else %}
               <div class="d-flex p-2 mb-2" style="background: #f1f1f1">
-                <p class="mb-0 font-bold">{{comment.author}}: </p>
-                <p class="mb-0">{{comment.content}}</p>
+                <p class="mb-0">No comments yet</p>
               </div>
-            {% endfor %}
+            {% endif %}
           </div>
         </div>
       </div>
