--- a/blog/templates/layouts/header.html
+++ b/blog/templates/layouts/header.html
@@ -42,6 +42,9 @@
         {% endfor %}
         {% if user.is_authenticated %}
           <li class="nav-item">
+            <a class="nav-link text-center" href="{% url 'profile' %}?next={% url 'index' %}"><i class="fa fa-user"></i> PROFILE</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link text-center" href="{% url 'logout' %}?next={% url 'index' %}"><i class="fa fa-sign-out"></i> LOGOUT</a>
           </li>
         {% else %}
