--- a/blog/templates/registration/login.html
+++ b/blog/templates/registration/login.html
@@ -3,9 +3,9 @@
 {% block main %}
 	<div class="container main">
 		<div class="row justify-content-center">
-			<div class="col-md-8 my-4">
+			<div class="col-md-6 my-4">
 				<div class="card">
-					<h4 class="text-secondary card-header">Log in</h4>
+					<h4 class="text-white card-header" style="background: #417690">Log in</h4>
 					<div class="card-body">
 						<form method="post" accept="{% url 'login' %}?next=/site/admin">
 							{% csrf_token %}
