--- a/blog/templates/layouts/header.html
+++ b/blog/templates/layouts/header.html
@@ -52,7 +52,7 @@
               <a href="{% url 'signup' %}?next=/site/admin" class="nav-link text-center"><i class="fa fa-user"></i> SIGNUP</a>
           </li>
           <li class="nav-item">
-            <a href="{% url 'login' %}?next=/" class="nav-link text-center"><i class="fa fa-sign-in"></i> LOGIN</a>
+            <a href="{% url 'login' %}" class="nav-link text-center"><i class="fa fa-sign-in"></i> LOGIN</a>
           </li>
         {% endif %}
       </ul>
