--- a/blog/templates/layouts/header.html
+++ b/blog/templates/layouts/header.html
@@ -49,7 +49,7 @@
           </li>
         {% else %}
           <li class="nav-item">
-              <a href="{% url 'signup' %}?next=/site/admin" class="nav-link text-center"><i class="fa fa-user"></i> SIGNUP</a>
+              <a href="{% url 'signup' %}" class="nav-link text-center"><i class="fa fa-user"></i> SIGNUP</a>
           </li>
           <li class="nav-item">
             <a href="{% url 'login' %}" class="nav-link text-center"><i class="fa fa-sign-in"></i> LOGIN</a>
