--- a/blog/templates/registration/login.html
+++ b/blog/templates/registration/login.html
@@ -1,27 +1,30 @@
 {% extends 'layouts/main.html' %}
 
 {% block main %}
-	<div class="container main">
-		<div class="row justify-content-center">
-			<div class="col-md-6 my-4">
-				<div class="card">
-					<h4 class="text-white card-header" style="background: #417690">Log in</h4>
-					<div class="card-body">
-						<form method="post" accept="{% url 'login' %}?next=/site/admin">
-							{% csrf_token %}
-							<div class="form-group">
-								<input type="text" class="form-control" name="username">
-							</div>
-							<div class="form-group">
-								<input type="password" class="form-control" name="password">
-							</div>
-							<div class="form-group">
-								<input type="submit" class="form-control btn btn-secondary" name="Log in">
-							</div>
-						</form>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+  <div class="container main">
+    <div class="row justify-content-center">
+      <div class="col-md-6 my-4">
+        <div class="card">
+          <h4 class="text-white card-header" style="background: #417690">Log in</h4>
+          <div class="card-body">
+            {% if errors %}
+              <p class="text-danger p-2 font-weight-bold" style="border: 1px solid red; border-radius: 5px!important;">{{errors}}</p>
+            {% endif %}
+            <form method="post" accept="{% url 'login' %}?next=/site/admin">
+              {% csrf_token %}
+              <div class="form-group">
+                <input type="text" class="form-control" name="username">
+              </div>
+              <div class="form-group">
+                <input type="password" class="form-control" name="password">
+              </div>
+              <div class="form-group">
+                <input type="submit" class="form-control btn btn-secondary" name="Log in">
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 {% endblock %}
