--- a/blog/templates/layouts/sidebar.html
+++ b/blog/templates/layouts/sidebar.html
@@ -4,10 +4,14 @@
     <h5 class="card-header">Search</h5>
     <div class="card-body">
       <div class="input-group">
-        <input type="text" class="form-control" placeholder="Search for...">
-        <span class="input-group-btn">
-          <button class="btn btn-secondary" type="button">Go!</button>
-        </span>
+        <form method="get" action="{% url 'search' %}">
+          <div class="input-group">
+            <input type="text" name="word" class="form-control" required="" placeholder="Search for...">
+            <span class="input-group-append rounded">
+              <input class="btn btn-secondary" type="submit">
+            </span>
+          </div>
+        </form>
       </div>
     </div>
   </div>
