--- a/blog/templates/posts/single.html
+++ b/blog/templates/posts/single.html
@@ -33,21 +33,24 @@
         <div class="card mb-4">
           <h5 class="card-header">Comment</h5>
           <div class="card-body">
-            <div class="form-group">
-              <textarea class="form-control" name="content" required="" placeholder="Type your comment"></textarea>
-            </div>
-            <div class="d-flex">
-              <p class="text-left flex-fill">Comment as
-                <span class="font-weight-bold">
-                  {% if user.is_authenticated %}
-                    {{user.username}}
-                  {% else %}
-                    Guest
-                  {% endif %}
-                </span>
-              </p>
-              <p class="text-right flex-fill"><a href="" class="btn btn-sm btn-primary">Publish</a></p>
-            </div>
+            <form method="post" action="{% url 'addcomment' id=post.id %}">
+              {% csrf_token %}
+              <div class="form-group">
+                <textarea class="form-control" name="content" required="" placeholder="Type your comment"></textarea>
+              </div>
+              <div class="d-flex">
+                <p class="text-left flex-fill">Comment as
+                  <span class="font-weight-bold">
+                    {% if user.is_authenticated %}
+                      {{user.username}}
+                    {% else %}
+                      Guest
+                    {% endif %}
+                  </span>
+                </p>
+                <p class="text-right flex-fill"><button type="submit" class="btn btn-sm btn-primary">Publish</button></p>
+              </div>
+            </form>
           </div>
         </div>
         <div class="card mb-4 comments">
