--- a/blog/templates/layouts/sidebar.html
+++ b/blog/templates/layouts/sidebar.html
@@ -77,7 +77,7 @@
     <div class="card-body">
       <div class="d-flex flex-wrap justify-content-between">
         {% for tag in tags %}
-          <a href="" class="btn btn-sm m-1 btn-outline-secondary">{{tag.name}}</a>
+          <a href="{% url 'tags' tag=tag.name %}" class="btn btn-sm m-1 btn-outline-secondary">{{tag.name}}</a>
         {% endfor %}
       </div>
     </div>
