--- a/blog/templates/layouts/sidebar.html
+++ b/blog/templates/layouts/sidebar.html
@@ -1,6 +1,6 @@
   {% load static %}
   <!-- Search Widget -->
-  <div class="card my-4">
+  <div class="card">
     <h5 class="card-header">Search</h5>
     <div class="card-body">
       <div class="input-group">
