--- a/blog/templates/posts/single.html
+++ b/blog/templates/posts/single.html
@@ -10,7 +10,7 @@
           <img class="card-img-top" style="max-height: 300px;" src="{{post.image}}" alt="Card image cap">
           <div class="card-body">
             <h2 class="card-title">{{post.title}}</h2>
-            <p class="card-text">{{post.content}}</p>
+            <p class="card-text text-justify">{{post.content}}</p>
           </div>
           <div class="card-footer d-flex">
             <div class="mr-2">
