--- a/blog/templates/layouts/sidebar.html
+++ b/blog/templates/layouts/sidebar.html
@@ -8,7 +8,7 @@
           <div class="input-group">
             <input type="text" name="word" class="form-control" required="" placeholder="Search for...">
             <span class="input-group-append rounded">
-              <input class="btn btn-secondary" type="submit">
+              <input class="btn btn-secondary rounded" type="submit">
             </span>
           </div>
         </form>
