--- a/blog/static/css/style.css
+++ b/blog/static/css/style.css
@@ -1,21 +1,13 @@
 
 body {
   background: #f1f1f1;
+  font-family: unset;
 }
 
 .container.main{
 	min-height: 100vh;
 }
 
-*{
-	border-radius: 0!important;
-}
-
-.navbar-bottom .nav-link {
-	color: aqua!important;
-	font-weight: bold!important;
-	font-size: 12px;
-}
 
 .navbar-top{
 	background: #417690;
@@ -25,6 +17,12 @@ body {
 	color: #6df14c!important;
 	font-weight: bold!important;
 	font-size: 16px;
+}
+
+.navbar-bottom .nav-link {
+	color: aqua!important;
+	font-weight: bold!important;
+	font-size: 12px;
 }
 
 .navbar-bottom{
@@ -39,13 +37,13 @@ footer{
 	border-top: 5px solid blue!important;
 }
 
-.form-control{
+input.form-control{
 	box-shadow: none!important;
-	border-radius: 5px!important;
 	font-size: 15px!important;
-	background: #e8f0fe;
+	background: #e8f0fe!important;
 }
 
-input[type='submit']{
-	background: #417690!important;
+.bg-django{
+	background: #417690;
+	color: white!important;
 }
