--- a/blog/templates/profile.html
+++ b/blog/templates/profile.html
@@ -6,7 +6,7 @@
     <div class="row justify-content-center">
       <!-- Blog Entries Column -->
       <div class="col-md-8 my-4">
-        <h4 class="text-white card-header" style="background: #417690">User Info</h4>
+        <h4 class="bg-django card-header">User Info</h4>
           <div class="card mb-4">
             <div class="card-body">
               <table class="table table-bordered">
@@ -22,6 +22,10 @@
                 </tr>
                   <td>Last Login</td>
                   <td>{{user.last_login}}</td>
+                </tr>
+                <tr>
+                  <td>Password</td>
+                  <td><a class="btn bg-django" href="{% url 'password_change' %}">Change Password</a></td>
                 </tr>
               </table>
             </div>
