--- a/blog/templates/registration/login.html
+++ b/blog/templates/registration/login.html
@@ -5,7 +5,7 @@
     <div class="row justify-content-center">
       <div class="col-md-6 my-4">
         <div class="card">
-          <h4 class="text-white card-header" style="background: #417690">Log in</h4>
+          <h4 class="card-header bg-django">Log in</h4>
           <div class="card-body">
             {% if errors %}
               <p class="text-danger p-2 font-weight-bold" style="border: 1px solid red; border-radius: 5px!important;">{{errors}}</p>
@@ -19,7 +19,10 @@
                 <input type="password" class="form-control" name="password">
               </div>
               <div class="form-group">
-                <input type="submit" class="form-control btn btn-secondary" name="Log in">
+                <button type="submit" class="form-control btn bg-django">Log In</button>
+              </div>
+              <div class="form-group text-right mb-0">
+                <a href="{% url 'password_reset' %}">Forget Password</a>
               </div>
             </form>
           </div>
