--- a/blog/templates/layouts/sidebar.html
+++ b/blog/templates/layouts/sidebar.html
@@ -93,7 +93,7 @@
          <input type="text" class="form-control" name="email" placeholder="Your emil">
        </div>
        <div class="form-group">
-         <input type="submit" name="Subscribe" class="form-control btn btn-success">
+         <button type="submit" class="form-control btn bg-django">Subscribe</button>
        </div>
     </div>
   </div>
