--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -36,15 +36,33 @@
             </div>
           </div>
         {% endif %}
+
         <!-- Pagination -->
-        <ul class="pagination justify-content-center mb-4">
-          <li class="page-item">
-            <a class="page-link" href="#">&larr; Older</a>
-          </li>
-          <li class="page-item">
-            <a class="page-link" href="#">Newer &rarr;</a>
-          </li>
-        </ul>
+        {% if posts.has_other_pages %}
+          <ul class="pagination justify-content-center mb-4">
+            {% if posts.has_previous %}
+            <li class="page-item">
+              <a class="page-link" href="?page={{posts.previous_page_number}}">&laquo; Older</a>
+            </li>
+            {% else %}
+              <li><span class=" page-link disabled">&laquo; Older</span></li>
+            {% endif %}
+            {% for page in posts.paginator.page_range %}
+              {% if posts.number == page %}
+              <li><a class="page-link text-danger" href="?page={{page}}">{{page}}</a></li>
+              {% else %}
+                <li><a class="page-link" href="?page={{page}}">{{page}}</a></li>
+              {% endif %}
+            {% endfor %}
+            {% if posts.has_next %}
+              <li class="page-item">
+                <a class="page-link" href="?page={{posts.next_page_number}}">Newer &raquo;</a>
+              </li>
+            {% else %}
+              <li><span class="disabled page-link">Newer&raquo;</span></li>
+            {% endif %}
+          </ul>
+        {% endif %}
       </div>
 
       <!-- Sidebar Widgets Column -->
