--- a/blog/templates/layouts/sidebar.html
+++ b/blog/templates/layouts/sidebar.html
@@ -6,7 +6,7 @@
       <div class="input-group">
         <form method="get" action="{% url 'search' %}">
           <div class="input-group">
-            <input type="text" name="word" class="form-control" required="" placeholder="Search for...">
+            <input type="text" name="word" value="{{word}}" class="form-control" required="" placeholder="Search for...">
             <span class="input-group-append rounded">
               <input class="btn btn-secondary rounded" type="submit">
             </span>
