--- a/blog/templates/search.html
+++ b/blog/templates/search.html
@@ -7,6 +7,11 @@
       <!-- Blog Entries Column -->
       <div class="col-md-8 my-4">
         {% if posts %}
+          <div class="card mb-4">
+            <div class="card-body">
+              <h4>Search result for "{{word}}"</h4>
+            </div>
+          </div>
           {% for post in posts %}
             <div class="card mb-4">
               <img class="card-img-top" style="max-height: 300px;" src="{{post.image}}" alt="Card image cap">
