changed search button

--- a/blog/templates/posts/single.html
+++ b/blog/templates/posts/single.html
@@ -48,7 +48,7 @@
                     {% endif %}
                   </span>
                 </p>
-                <p class="text-right flex-fill"><button type="submit" class="btn btn-sm btn-primary">Publish</button></p>
+                <p class="text-right flex-fill"><button type="submit" class="btn btn-sm bg-django">Publish</button></p>
               </div>
             </form>
           </div>
