--- a/blog/templates/layouts/sidebar.html
+++ b/blog/templates/layouts/sidebar.html
@@ -4,13 +4,9 @@
     <h5 class="card-header">Search</h5>
     <div class="card-body">
       <div class="input-group">
-        <form method="get" action="{% url 'search' %}">
-          <div class="input-group">
-            <input type="text" name="word" value="{{word}}" class="form-control" required="" placeholder="Search for...">
-            <span class="input-group-append rounded">
-              <input class="btn btn-secondary rounded" type="submit">
-            </span>
-          </div>
+        <form method="get" action="{% url 'search' %}" class="d-flex" style="width: 100%;">
+          <input type="text" name="word" value="{{word}}" class="form-control" required="" placeholder="Search for...">
+          <button class="btn bg-django" class="form-control" type="submit">Go!</button>
         </form>
       </div>
     </div>
